// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshots 1`] = `
.c0 {
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c0.full-width {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0.disabled {
  cursor: default;
  pointer-events: none;
}

.c2 {
  background: none;
  border: 0;
  box-sizing: content-box;
  color: currentColor;
  display: block;
  font: inherit;
  margin: 0;
  min-width: 0;
  padding: 0;
  width: 100%;
  -webkit-tap-highlight-color: transparent;
  outline: none;
}

.c2:disabled,
.c2:disabled:hover,
.c2.disabled,
.c2.disabled:hover {
  cursor: default;
  pointer-events: none;
}

.c2::-webkit-search-decoration: {
  -webkit-appearance: none;
}

.c2[type='search'] {
  -moz-appearance: textfield;
  -webkit-appearance: textfield;
}

.c1 {
  padding: 12px 16px;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #dfe1ed;
}

.c1 input,
.c1 textarea {
  font-size: 14px;
  font-weight: 500;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  color: #424347;
}

.c1 input::-webkit-input-placeholder,
.c1 textarea::-webkit-input-placeholder {
  color: #b7bac7;
  font-weight: normal;
}

.c1 input::-moz-placeholder,
.c1 textarea::-moz-placeholder {
  color: #b7bac7;
  font-weight: normal;
}

.c1 input:-ms-input-placeholder,
.c1 textarea:-ms-input-placeholder {
  color: #b7bac7;
  font-weight: normal;
}

.c1 input::-ms-input-placeholder,
.c1 textarea::-ms-input-placeholder {
  color: #b7bac7;
  font-weight: normal;
}

.c1.focused {
  box-shadow: 0 0 0 2px #0ec76a;
}

.c1.focused input,
.c1.focused textarea {
  color: #424347;
}

<div
  class="outlined SPInputWrap c0 c1"
>
  <input
    aria-invalid="false"
    class="SSInputBase c2"
    type="text"
    value=""
  />
</div>
`;

exports[`should match snapshots 2`] = `
.c0 {
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c0.full-width {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0.disabled {
  cursor: default;
  pointer-events: none;
}

.c2 {
  background: none;
  border: 0;
  box-sizing: content-box;
  color: currentColor;
  display: block;
  font: inherit;
  margin: 0;
  min-width: 0;
  padding: 0;
  width: 100%;
  -webkit-tap-highlight-color: transparent;
  outline: none;
}

.c2:disabled,
.c2:disabled:hover,
.c2.disabled,
.c2.disabled:hover {
  cursor: default;
  pointer-events: none;
}

.c2::-webkit-search-decoration: {
  -webkit-appearance: none;
}

.c2[type='search'] {
  -moz-appearance: textfield;
  -webkit-appearance: textfield;
}

.c1 {
  padding: 12px 16px;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #dfe1ed;
}

.c1 input,
.c1 textarea {
  font-size: 14px;
  font-weight: 500;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  color: #424347;
}

.c1 input::-webkit-input-placeholder,
.c1 textarea::-webkit-input-placeholder {
  color: #b7bac7;
  font-weight: normal;
}

.c1 input::-moz-placeholder,
.c1 textarea::-moz-placeholder {
  color: #b7bac7;
  font-weight: normal;
}

.c1 input:-ms-input-placeholder,
.c1 textarea:-ms-input-placeholder {
  color: #b7bac7;
  font-weight: normal;
}

.c1 input::-ms-input-placeholder,
.c1 textarea::-ms-input-placeholder {
  color: #b7bac7;
  font-weight: normal;
}

.c1.focused {
  box-shadow: 0 0 0 2px #0ec76a;
}

.c1.focused input,
.c1.focused textarea {
  color: #424347;
}

<div
  class="outlined SPInputWrap c0 c1"
>
  <input
    aria-invalid="false"
    class="SSInputBase c2"
    type="text"
    value="value"
  />
</div>
`;
